temporary load mp4 in video.js through example.com -> cdn.example.com

--- a/example.com/public/index.html
+++ b/example.com/public/index.html
@@ -1,1 +1,16 @@
-hello
+<html>
+  <head>
+    <title>example.com</title>
+  </head>
+  <body>
+    <video
+      poster=""
+      preload="auto"
+      controls
+      playsinline
+    >
+      <source src="//cdn.example.com/dist/sample_1280x720_surfing_with_audio.mp4" type="video/mp4" />
+      <source src="//cdn.example.com/dist/sample_1280x720_surfing_with_audio.m3u8" type="application/x-mpegURL" />
+    </video>
+  </body>
+</html>
