--- a/example.com/public/index.html
+++ b/example.com/public/index.html
@@ -1,9 +1,11 @@
 <html>
   <head>
     <title>example.com</title>
+    <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
   </head>
   <body>
     <video
+      class="video-js"
       poster=""
       preload="auto"
       controls
@@ -12,5 +14,7 @@
       <source src="//cdn.example.com/dist/sample_1280x720_surfing_with_audio.m3u8" type="application/x-mpegURL" />
       <source src="//cdn.example.com/dist/sample_1280x720_surfing_with_audio.mp4" type="video/mp4" />
     </video>
+    <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
+    <script type="application/javascript" src="/main.js"></script>
   </body>
 </html>
