--- a/example.com/public/index.html
+++ b/example.com/public/index.html
@@ -4,16 +4,19 @@
     <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
   </head>
   <body>
+    <button id="toBlob">toBlob</button>
     <video
       class="video-js"
       poster=""
       preload="auto"
+      crossorigin="anonymous"
       controls
       playsinline
     >
       <source src="//cdn.example.com/dist/sample_1280x720_surfing_with_audio.m3u8" type="application/x-mpegURL" />
       <source src="//cdn.example.com/dist/sample_1280x720_surfing_with_audio.mp4" type="video/mp4" />
     </video>
+    <canvas id="canvas" />
     <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
     <script type="application/javascript" src="/main.js"></script>
   </body>
